# mcp-cli

./: .gitignore  AGENTS.md  MCP_SPEC.md  main.py  pyproject.toml
mcp_cli/: __init__.py  cli.py  client.py  logging_utils.py  models.py  runner.py  sampling.py  server.py  telemetry.py  transport.py  web.py
tests/: __init__.py  test_cli.py  test_client.py
tests/utils/: __init__.py  wait.py
